Update .gitignore, enhance error handling in WeatherAPI, and add README documentation

--- a/real-time-weather-app/.gitignore
+++ b/real-time-weather-app/.gitignore
@@ -1,2 +1,11 @@
-# env files
-.env*
+# API Keys and sensitive configuration
+js/config.js
+
+# Development files
+*.log
+.DS_Store
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
